* Removed socket.settimeout from backend.py.
  It was already set in commandline.py.
* Removed pycryptopp from README requirements
* Merged in lp:~aaron-whitehouse/duplicity/08-snap-python2
  - Add packaging code for Snapcraft/Snap packages
* Fixed build on Launchpad for 0.8.x, so now there is a new PPA at
  https://launchpad.net/~duplicity-team/+archive/ubuntu/daily-dev-trunk


New in v0.8.03 (2019/08/09)
---------------------------
* Some changes to provide Python test coverage:
  - Coverage runs with every test cycle
  - Does not cover functional tests that spawn
    duplicity itself.  Next pass.
  - After a run use 'coverage report html' to see
    an overview list and links to drill down.  It
    shows up in htmlcov/index.html.
* Fixed bugs #1838427 and #1838702 with a fix
  suggested by Stephen Miller.  The fix was to
  supply tarfile with a unicode grpid, not bytes.
* More changes to provide Python test coverage:
  - Now covers functional tests spawning duplicity
  - Does not cover bin/duplicity for some reason
* More changes to provide Python test coverage:
  - Moved bulk of code from bin/duplicity to
    duplicity/dup_main.py for coverage.
* Fixed some 2to3 issues in dup_main.py
* Fixed division differences with futurize
* Merged in translation updates


New in v0.8.02 (2019/07/25)
---------------------------
* Remove python-gettext from requirements.txt.  Normal
  Python installation includes gettext.
* Mod README to include Python 3.6 and 3.7
* Fixed bug #1836829 progress.py: old_div not defined
  - also fixed old_div in _boto_multi.py
* Merged in lp:~limburgher/duplicity/dropbox
  - Fixes bug #1836611 dropbox mixing bytes and strings
* Merged in lp:~stragerneds/duplicity/duplicity
  - Cache results of filename parsing for speedup
* Removed python-gettext from setup.py.  Whoops!
* Merged in lp:~mterry/duplicity/pytest-runner-move
  - Move pytest-runner to testing requirements in setup
* Fix language classifiers in setup.py