@@ -696,13 +696,13 @@ def parse_cmdline_options(arglist):
     # convert file_prefix* string
     if sys.version_info.major >= 3:
         if isinstance(globals.file_prefix, str):
-            globals.file_prefix = bytes(globals.file_prefix, 'utf-8')
+            globals.file_prefix = bytes(globals.file_prefix, u'utf-8')
         if isinstance(globals.file_prefix_manifest, str):
-            globals.file_prefix_manifest = bytes(globals.file_prefix_manifest, 'utf-8')
+            globals.file_prefix_manifest = bytes(globals.file_prefix_manifest, u'utf-8')
         if isinstance(globals.file_prefix_archive, str):
-            globals.file_prefix_archive = bytes(globals.file_prefix_archive, 'utf-8')
+            globals.file_prefix_archive = bytes(globals.file_prefix_archive, u'utf-8')
         if isinstance(globals.file_prefix_signature, str):
-            globals.file_prefix_signature = bytes(globals.file_prefix_signature, 'utf-8')
+            globals.file_prefix_signature = bytes(globals.file_prefix_signature, u'utf-8')
 
     # todo: this should really NOT be done here
     socket.setdefaulttimeout(globals.timeout)
