@@ -28,13 +28,13 @@
 # any suggestions.
 
 from __future__ import print_function
-from future import standard_library
-standard_library.install_aliases()
 from builtins import filter
 from builtins import map
 from builtins import next
 from builtins import object
 from builtins import range
+from future import standard_library
+standard_library.install_aliases()
 
 import copy
 import fasteners
