@@ -21,6 +21,7 @@ from __future__ import print_function
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
 from __future__ import print_function
+from builtins import object
 from future import standard_library
 standard_library.install_aliases()
 
@@ -213,7 +214,7 @@ class DDTest(UnitTestCase):
 
     def test_combine_path_iters(self):
         u"""Test diffdir.combine_path_iters"""
-        class Dummy:
+        class Dummy(object):
             def __init__(self, index, other=None):
                 self.index = index
                 self.other = other
