@@ -11,6 +11,7 @@ New in v0.8.04 (2019/08/??)
   - Add packaging code for Snapcraft/Snap packages
 * Fixed build on Launchpad for 0.8.x, so now there is a new PPA at
   https://launchpad.net/~duplicity-team/+archive/ubuntu/daily-dev-trunk
+* Ran futurize selectively filter-by-filter to find the ones that work.
 
 
 New in v0.8.03 (2019/08/09)
